fix: added some terms and corrected previous baseline

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -37,19 +37,32 @@ ignore_patterns:
 accepted_words:
   # --- Aziende e Brand ---
   - Atlassian
+  - Bluewind
+  - ClickUp
+  - DIPReader
+  - Eggon
+  - Ergon
   - GitHub
   - JetStream
   - Jira
   - KeyCloak
   - M31
   - MacOS
+  - NEXUM
+  - Nexum
   - NoTIP
+  - Sanmarco
+  - SmartOrder
   - SonarQube
   - Typstyle
+  - VarGroup
+  - Vimar
 
   # --- Cognomi e Nomi Team ---
   - Contarini
+  - Cossaro
   - De
+  - Ferrarin
   - Mantoan
   - Marcon
   - Mazzariol
@@ -94,6 +107,7 @@ accepted_words:
   - UML
   - UUID
   - Kubernetes
+  - https
   - HTTPS
   - HyperText
   - NoSQL
@@ -101,9 +115,18 @@ accepted_words:
   - TCP
   - Nats
   - TimescaleDB
+  - BRD
+  - DevOps
+  - ERP
   - ESLint
-  - Golang
+  - GDPR
+  - github
   - gitignore
+  - Golang
+  - LLM
+  - Markdown
+  - NLP
+  - OWASP
 
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
@@ -114,7 +137,7 @@ accepted_words:
   - BLE
   - changelog
   - CMMI
-  - Cowork
+  - cowork
   - Cyclomatic
   - DTO
   - EAC
@@ -153,6 +176,9 @@ accepted_words:
   - Serverless
   - WebApp
   - DdB
+  - multitenant
+  - multitenancy
+  - testbook
 
   # --- Terminologia Standard Progetto ---
   - docest
@@ -162,6 +188,7 @@ accepted_words:
   - EP
   - roadmap
   - RO # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
+  - rtb
   - microservizi
   - onboarding
   - L'Auth
@@ -198,6 +225,14 @@ accepted_words:
 
 
   # --- Parole Italiane mancanti / Neologismi ---
+  - autoconsistente
+  - autoconsistenza
+  - collaborativamente
+  - concatenabili
+  - multimodale
+  - pragmaticità
+  - primis
+  - rinomatamente
   - ciclomatica
   - efficientare
   - malinterpretabili
@@ -246,4 +281,26 @@ accepted_words:
   - containerizzate
   - un'API
   - l'Issue
+  - dell'AI
   - dell'ID
+  - l'AC
+  - L'AC
+  - l'API
+  - L'API
+  - l'audit
+  - L'admin
+  - L'Admin
+  - L'app
+  - l'EAC
+  - L'EAC
+  - l'ETC
+  - L'ETC
+  - l'EV
+  - L'EV
+  - l'MVP
+  - l'RSI
+  - L'RSI
+  - l'SPI
+  - L'SPI
+  - nell'EAC
+  - sull'MVP
