--- a/docs/11-candidatura/docest/glossario/glossario.meta.yaml
+++ b/docs/11-candidatura/docest/glossario/glossario.meta.yaml
@@ -25,4 +25,4 @@ changelog:
   - Matteo Mantoan
   verifier: Leonardo Preo
   description: |
-    Prima bozza, implemetazione di automatismi e primi termini
+    Prima bozza, implementazione di automatismi e primi termini
