--- a/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,5 +1,9 @@
 title: Lettera di presentazione
 changelog:
+  - version: 1.0.0
+    date: "2026-02-17"
+    approver: Valerio Solito
+    baseline: RTB
   - version: "0.0.1"
     date: "2026-02-10"
     authors:
