--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -4,6 +4,13 @@ changelog:
     date: "2026-02-12"
     approver: Valerio Solito
     baseline: RTB
+  - version: "0.9.0"
+    date: "2026-02-11"
+    authors:
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Sistemazione del Cruscotto di Valutazione
   - version: "0.8.3"
     date: "2026-02-08"
     authors:
