--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -262,6 +262,9 @@ accepted_words:
   - istanziazione
   - istanziata
   - containerizzazione
+  - l'Earned 
+  - L'Actual
+  - dell'EAC
   - containerizzate
   - un'API
   - l'Issue
