docs(piano-qualifica): Validazione (#131)
* definizione misurazioni e valutazione automiglioramento

* valutazioni automiglioramento

* finita bozza valutazioni miglioramento

* docest_piano-qualifica_v0.8.1

* fix numeri requisiti

* Update verifiers in piano_qualifica.meta.yaml

* correzioni confermate

* fix valutazione tecnologie

* fix valutazione Angular

* indice di Gulpease

* indice di Gulpease

* sistemando conflicts

* docs(piano-qualifica): Validato per RTB

* fix numeri requisiti

* update metrics

* update cruscotto

* sistemazione Cruscotto

* sistemato cruscotto

* Updated ignore.yaml

* fix: sistemato formatting

---------

Co-authored-by: Alessandro Contarini <alessandro.contarini21@gmail.com>
Co-authored-by: Mario1535 <mariocurzio.depasquale@gmail.com>
Co-authored-by: Scafu <alessandro.mazzariol04@gmail.com>
Co-authored-by: Alessandro Mazzariol <107548899+Scafu@users.noreply.github.com>

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -98,12 +98,11 @@ accepted_words:
   - HyperText
   - NoSQL
   - WebSocket
+  - TimescaleDB
+  - Hypertables
   - TCP
   - Nats
   - TimescaleDB
-  - ESLint
-  - Golang
-  - gitignore
 
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
@@ -149,6 +148,10 @@ accepted_words:
   - Postcondizioni
   - Precondizioni
   - namespace
+  - AC
+  - SPI
+  - ETC
+  - RSI
   - PdQ
   - Serverless
   - WebApp
@@ -188,6 +191,7 @@ accepted_words:
   - PasswordInvalida
   - RangeInvalido
   - NessunDato
+  - burnup
   - RepoDocumentale
   - uc 
   - authd
@@ -231,6 +235,21 @@ accepted_words:
   - l'endpoint
   - failover
   - provisionato
+  - l'automiglioramento
+  - messagging
+  - decifratura
+  - d'esami
+  - l'EV
+  - L'AC
+  - l'SPI
+  - L'EAC
+  - nell'EAC
+  - l'ETC
+  - L'RSI
+  - l'API
+  - dell'
+  - l'
+  - l'AC
   - d'esami
   - versionare
   - un'activity
@@ -243,6 +262,9 @@ accepted_words:
   - istanziazione
   - istanziata
   - containerizzazione
+  - l'Earned 
+  - L'Actual
+  - dell'EAC
   - containerizzate
   - un'API
   - l'Issue
