fix: fixed versions for RTB

--- a/docs/12-rtb/docest/analisi_stato_arte/analisi_stato_arte.meta.yaml
+++ b/docs/12-rtb/docest/analisi_stato_arte/analisi_stato_arte.meta.yaml
@@ -1,5 +1,9 @@
 title: Analisi dello Stato dell'Arte
 changelog:
+  - version: "1.0.0"
+    approver: Valerio Solito
+    baseline: RTB
+    date: "2026-02-16"
   - version: "0.1.0"
     date: "2026-02-04"
     authors:
