--- a/docs/12-rtb/slides/ddb_2025-12-15/ddb_2025-12-15.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-12-15/ddb_2025-12-15.meta.yaml
@@ -1,5 +1,9 @@
 title: Diario di Bordo 2025-12-01
 changelog:
+  - version: 1.0.0
+    date: '2026-02-16'
+    approver: Alessandro Contarini
+    baseline: RTB
   - version: "0.0.1"
     date: "2025-12-01"
     authors:
