fix: enhance spellcheck by stripping Italian elision prefixes

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -234,6 +234,7 @@ accepted_words:
   # --- Parole Italiane mancanti / Neologismi ---
   - autoconsistente
   - autoconsistenza
+  - automiglioramento
   - collaborativamente
   - concatenabili
   - multimodale
@@ -257,42 +258,16 @@ accepted_words:
   - yyyy
   - sottocasi
   - sottocaso
-  - un'app
   - impersonificare
-  - l'ID
   - pre
   - Sez
-  - l'OTP
-  - dell'alert
-  - dall'alert
-  - l'alert
   - impersonificato
-  - dell'Owner
-  - dell'API
   - istanziati
-  - l'endpoint
   - failover
   - provisionato
-  - l'automiglioramento
   - messagging
   - decifratura
-  - d'esami
-  - l'EV
-  - L'AC
-  - l'SPI
-  - L'EAC
-  - nell'EAC
-  - l'ETC
-  - L'RSI
-  - l'API
-  - dell'
-  - l'
-  - l'AC
-  - d'esami
   - versionare
-  - un'activity
-  - l'uc
-  - l'istanziazione
   - rifattorizzato
   - deployata
   - loggata
@@ -300,32 +275,4 @@ accepted_words:
   - istanziazione
   - istanziata
   - containerizzazione
-  - l'Earned 
-  - L'Actual
-  - dell'EAC
   - containerizzate
-  - un'API
-  - l'Issue
-  - dell'AI
-  - dell'ID
-  - l'AC
-  - L'AC
-  - l'API
-  - L'API
-  - l'audit
-  - L'admin
-  - L'Admin
-  - L'app
-  - l'EAC
-  - L'EAC
-  - l'ETC
-  - L'ETC
-  - l'EV
-  - L'EV
-  - l'MVP
-  - l'RSI
-  - L'RSI
-  - l'SPI
-  - L'SPI
-  - nell'EAC
-  - sull'MVP
