--- a/notipdo/requirements.txt
+++ b/notipdo/requirements.txt
@@ -19,10 +19,21 @@ charset-normalizer==3.4.4
 click==8.3.1
     # via typer
 cryptography==46.0.5
-    # via pdfminer-six
+    # via
+    #   google-auth
+    #   pdfminer-six
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.45
+    # via notipdo (pyproject.toml)
+google-auth==2.48.0
+    # via
+    #   google-auth-oauthlib
+    #   gspread
+    #   notipdo (pyproject.toml)
+google-auth-oauthlib==1.2.4
+    # via gspread
+gspread==6.2.1
     # via notipdo (pyproject.toml)
 idna==3.11
     # via requests
@@ -34,6 +45,8 @@ markdown-it-py==4.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
+oauthlib==3.3.1
+    # via requests-oauthlib
 packaging==25.0
     # via notipdo (pyproject.toml)
 pdfminer-six==20251230
@@ -42,6 +55,12 @@ pdfplumber==0.11.9
     # via notipdo (pyproject.toml)
 pillow==12.1.1
     # via pdfplumber
+pyasn1==0.6.2
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pycparser==3.0
     # via cffi
 pygments==2.19.2
@@ -55,13 +74,19 @@ referencing==0.37.0
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.5
-    # via notipdo (pyproject.toml)
+    # via
+    #   notipdo (pyproject.toml)
+    #   requests-oauthlib
+requests-oauthlib==2.0.0
+    # via google-auth-oauthlib
 rich==14.2.0
     # via typer
 rpds-py==0.28.0
     # via
     #   jsonschema
     #   referencing
+rsa==4.9.1
+    # via google-auth
 shellingham==1.5.4
     # via typer
 smmap==5.0.2
