--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,13 @@
 title: Norme di Progetto
 changelog:
+  - version: "1.1.0"
+    date: "2026-02-26"
+    authors:
+      - Leonardo Preo
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Adottamento struttura "Norme e Strumenti + Attività" per processi primari e di supporto
   - version: 1.0.0
     date: '2026-02-12'
     approver: Valerio Solito
