fix: typos and improve formatting in project norms documentation

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -7,7 +7,7 @@ changelog:
       - Alessandro Contarini
     verifier: TBD
     description: >
-      Adottamento struttura "Norme e Strumenti + Attività" per processi primari e di supporto
+      Adozione struttura "Norme e Strumenti + Attività" per processi primari e di supporto
   - version: 1.0.0
     date: '2026-02-12'
     approver: Valerio Solito
