--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-02-25"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Correzioni a seguito dell'incontro con il Prof. Cardin 
   - version: "1.0.0"
