fix: missing verifier

--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -5,7 +5,7 @@ changelog:
     authors:
       - Francesco Marcon
       - Matteo Mantoan 
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Aggiustamento test a seguito a seguito dell'aggiornamento dell'AdR a v1.1.0
   - version: 1.0.0
