fix: update document references

--- a/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,5 +1,12 @@
 title: Lettera di presentazione
 changelog:
+  - version: "1.0.1"
+    date: "2026-02-26"
+    authors:
+      - Francesco Marcon
+    verifier: Valerio Solito
+    description: >
+      Bozza Lettera di presentazio
   - version: 1.0.0
     date: "2026-02-16"
     approver: Valerio Solito
