fix(lettera): sistemato meta yaml

--- a/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/12-rtb/docest/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -6,7 +6,7 @@ changelog:
       - Francesco Marcon
     verifier: Valerio Solito
     description: >
-      Bozza Lettera di presentazio
+      Aggiornamento Versioni Documenti
   - version: 1.0.0
     date: "2026-02-16"
     approver: Valerio Solito
