--- a/docs/13-pb/verbest/verbest_2026-02-24/verbest_2026-02-24.meta.yaml
+++ b/docs/13-pb/verbest/verbest_2026-02-24/verbest_2026-02-24.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-02-24"
     authors:
       - Matteo Mantoan
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Prima bozza del verbale
