doc(verbale): Aggiunto Verificatore

--- a/docs/13-pb/verbint/verbint_2026-02-20/verbint_2026-02-20.meta.yaml
+++ b/docs/13-pb/verbint/verbint_2026-02-20/verbint_2026-02-20.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-02-23"
     authors:
       - Matteo Mantoan
-    verifier: TBD
+    verifier: Valerio Solito
     description: >
       Stesura del verbale
